# std-training

.devcontainer/: devcontainer.json
advanced/button-interrupt/: Cargo.toml  wokwi.toml
advanced/button-interrupt/examples/: solution_led.rs
advanced/i2c-driver/: Cargo.toml  wokwi.toml
advanced/i2c-driver/src/: icm42670p.rs  main.rs
advanced/i2c-sensor-reading/: Cargo.toml  wokwi.toml
advanced/i2c-sensor-reading/examples/: part_1.rs  part_2.rs
advanced/i2c-sensor-reading/src/: main.rs
common/lib/get-uuid/: Cargo.toml
common/lib/mqtt-messages/: Cargo.toml
common/lib/mqtt-messages/src/: lib.rs
common/lib/rgb-led/: Cargo.toml
common/lib/wifi/: Cargo.toml
common/lib/wifi/.cargo/: config.toml
intro/hardware-check/: Cargo.toml
intro/hardware-check/.cargo/: config.toml
intro/http-client/: Cargo.toml
intro/http-client/src/: main.rs
intro/http-server/: Cargo.toml  sdkconfig.defaults
intro/http-server/src/: main.rs
intro/mqtt/: README.md
intro/mqtt/exercise/: Cargo.toml
intro/mqtt/exercise/examples/: solution_publ.rs  solution_publ_rcv.rs
intro/mqtt/exercise/src/: main.rs
intro/mqtt/host-client/: Cargo.toml
intro/mqtt/host-client/src/: main.rs
