[package]
name = "button-interrupt"
version = "0.1.0"
authors = [
 "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
 "Sergio Gasquez <sergio.gasquez@gmail.com>",
 "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
]
edition = "2021"
resolver = "2"

[[bin]]
name = "button-interrupt"
# We can't use the default rust libtest harness for a crosscompile target
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
# Symbols are nice and they don't increase the size on Flash
debug     = true
opt-level = "z"

[dependencies]
anyhow      = "=1.0.95"
esp-idf-svc = "=0.49.1"
rgb-led     = { path = "../../common/lib/rgb-led" }

[build-dependencies]
embuild = "=0.32.0"
# Workaround for https://github.com/esp-rs/std-training/issues/266
cc = "=1.1.31"
