[package]
name = "i2c-sensor-reading"
version = "0.1.0"
authors = [
 "Sergio Gasquez <sergio.gasquez@gmail.com>",
 "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
]
edition = "2021"
resolver = "2"

[[bin]]
name = "i2c-sensor-reading"
# We can't use the default rust libtest harness for a crosscompile target
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
# Symbols are nice and they don't increase the size on Flash
debug     = true
opt-level = "z"

[dependencies]
anyhow       = "=1.0.95"
embedded-hal = "=1.0.0"
esp-idf-svc  = "=0.49.1"
icm42670     = "=0.2.0"
lis3dh       = "=0.4.3"
shared-bus   = "=0.3.1"
shtcx        = "=1.0.0"

[build-dependencies]
embuild = "=0.32.0"
# Workaround for https://github.com/esp-rs/std-training/issues/266
cc = "=1.1.31"
