[package]
name = "hardware-check"
version = "0.1.0"
authors = [
 "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
 "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"
resolver = "2"

[[bin]]
name = "hardware-check"
harness = false # We can't use the default rust libtest harness for a crosscompile target

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow      = "=1.0.94"
esp-idf-svc = "=0.49.1"
log         = "=0.4.22"
rgb-led     = { path = "../../common/lib/rgb-led" }
toml-cfg    = "=0.2.0"
wifi        = { path = "../../common/lib/wifi" }

[build-dependencies]
embuild  = "=0.32.0"
cc       = "=1.1.31" # Workaround for https://github.com/esp-rs/std-training/issues/266
