[package]
name = "http-server"
version = "0.1.0"
authors = [
 "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
 "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"
resolver = "2"

[[bin]]
name = "http-server"
# We can't use the default rust libtest harness for a crosscompile target
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
# Symbols are nice and they don't increase the size on Flash
debug     = true
opt-level = "z"

[dependencies]
anyhow       = "=1.0.95"
embedded-svc = "=0.28.0"
esp-idf-svc  = "=0.49.1"
shtcx        = "=1.0.0"
toml-cfg     = "=0.2.0"
wifi         = { path = "../../common/lib/wifi" }

[build-dependencies]
embuild = "=0.32.0"
# Workaround for https://github.com/esp-rs/std-training/issues/266
cc = "=1.1.31"
